Fixed colour contrast
Fixes #64

--- a/includes/blocks/src/alerts/style.scss
+++ b/includes/blocks/src/alerts/style.scss
@@ -36,7 +36,7 @@
 	}
 
 	&.is-style-success {
-		color: #155724;
+		color: #0f4c1a;
 		background-color: #d4edda;
 		border-color: #c3e6cb;
 	}
@@ -46,7 +46,7 @@
 	}
 
 	&.is-style-info {
-		color: #0c5460;
+		color: #084852;
 		background-color: #d1ecf1;
 		border-color: #bee5eb;
 	}
@@ -56,13 +56,13 @@
 	}
 
 	&.is-style-warning {
-		color: #856404;
-		background-color: #fff3cd;
-		border-color: #ffeeba;
+		color: #5d4703;
+		background-color: #fff8e1;
+		border-color: #fff2cc;
 	}
 
 	&.is-style-warning hr {
-		border-top-color: #ffe8a1;
+		border-top-color: #ffecb3;
 	}
 
 	&.is-style-danger {
@@ -76,13 +76,13 @@
 	}
 
 	&.is-style-light {
-		color: #818182;
-		background-color: #fefefe;
-		border-color: #fdfdfe;
+		color: #2d2d2e;
+		background-color: #f8f9fa;
+		border-color: #e9ecef;
 	}
 
 	&.is-style-light hr {
-		border-top-color: #ececf6;
+		border-top-color: #dee2e6;
 	}
 
 	&.is-style-dark {
